core-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-gateway
  namespace: backend
  labels:
    app: core-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: core-gateway
    spec:
      serviceAccountName: spring-cloud-kubernetes
      containers:
        - name: core-gateway
          #image: ghcr.io/cloud2scape/core-gateway:latest
          image: docker.io/laigasus/core-gateway:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          resources:
            limits:
              cpu: 1200m
              memory: 1000Mi
            requests:
              cpu: 600m
              memory: 600Mi
