core-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-gateway
  namespace: backend
  labels:
    app: core-gateway
  #annotations: # NLB로 사용할 때 설정
    #service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    #service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    #service.beta.kubernetes.io/aws-load-balancer-name: "market-nlb"
    #service.beta.kubernetes.io/aws-load-balancer-target-type: "ip"  # Pod 대신 EC2를 대상으로 설정
    #service.beta.kubernetes.io/aws-load-balancer-subnets: ${SUBNET1},${SUBNET2}

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: core-gateway
